# Muhtasim_Final_Omni_Ai

./: .dockerignore  .env.docker  .gitignore  README.md  docker-compose.yml  implementation_plan.md  logs.txt  logs_investigation.txt  package-lock.json  package.json  reset_db.py  setup_structure.py  start.bat  test_swarm_logic.py  train_model.py  walkthrough.md
.github/workflows/: deploy.yml
apps/api-gateway/: main.py
apps/api_gateway/: main.py
apps/dashboard/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/dashboard/legacy_dashboard/: app.py
backend/: Dockerfile  requirements.txt
backend/api/: main.py
backend/brain/: cloud_trainer.py  swarm_manager.py
backend/brain/agents/: dqn_agent.py  rl_agent.py
config/: config.py
core/: backtester.py  brain.py  cex_feed.py  data_nexus.py  macro_correlator.py  orderbook_analyzer.py  risk_engine.py  sentiment.py  sor_router.py
core/aggregator/: global_book.py
core/meta_brain/: evolution.py  hybrid_brain.py  local_llm.py  strategy_generator.py
core/scrapers/: alpha_scout.py  dao_tracker.py  discord_sentiment.py  social_scraper.py  telegram_alpha.py
hardware/: fpga_bridge.py
infrastructure/docker/: api.Dockerfile  brain.Dockerfile
legacy_backup/backend/: requirements.txt
legacy_backup/core/: execution.py  feature_engineering.py  macro_correlator.py  notifications.py
services/execution-engine/rust_core/: Cargo.toml  Dockerfile  build_output.txt
services/execution-engine/rust_core/src/: lib.rs  main.rs
(+44 files in other folders)
