[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_core"
crate-type = ["cdylib"]

[dependencies]
# pyo3 কে optional করা হয়েছে
pyo3 = { version = "0.19.0", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

# নতুন ফিচার সেকশন যোগ করা হয়েছে
[features]
default = ["python-backend"]
python-backend = ["dep:pyo3"]
